# Gaussian-Splat-Renderer

./: .gitignore  Cargo.toml
photoIntake/: pyproject.toml  requirements.txt  test_gpu.py
photoIntake/src/photo_intake/: __init__.py  ingest.py
viewer/: Cargo.toml
viewer/src/: app.rs  camera.rs  main.rs  mesh.rs  renderer.rs  shader.wgsl
